force-app/main/default/objects/User/fields/Bypass_Flow__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Flow</label>
    <type>Checkbox</type>
</CustomField>