force-app/main/default/objects/User/fields/Entite_Juridique__c.field-meta.xml
<CustomField>
    <fullName>Entite_Juridique__c</fullName>
    <label>Entité Juridique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TST</fullName>
            </value>
            <value>
                <fullName>TRO</fullName>
            </value>
            <value>
                <fullName>TST/TRO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>